# scrapper

./: .gitignore  Cargo.toml  LICENSE  README.md  scrapper.toml  
out_2/: chapter_1.txt  chapter_10.txt  chapter_11.txt  chapter_13.txt  chapter_14.txt  chapter_15.txt  chapter_17.txt  chapter_18.txt  chapter_2.txt  chapter_20.txt  chapter_21.txt  chapter_22.txt  chapter_23.txt  chapter_24.txt  chapter_25.txt  chapter_26.txt  chapter_28.txt  chapter_3.txt  chapter_30.txt  chapter_31.txt  chapter_32.txt  chapter_33.txt  chapter_35.txt  chapter_36.txt  chapter_37.txt  chapter_39.txt  chapter_4.txt  chapter_40.txt  chapter_41.txt  chapter_43.txt  chapter_44.txt  chapter_46.txt  chapter_5.txt  chapter_6.txt  chapter_7.txt  chapter_8.txt  chapter_9.txt
src/: config.rs  csv_reader.rs  error.rs  file_manager.rs  main.rs  progress.rs  task_manager.rs  types.rs  web_scraper.rs
