[package]
name = "scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
indicatif = { version = "0.18.0", features = ["tokio"] }
reqwest = "0.12.22"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-stream = "0.1.17"
toml = "0.9.5"
url = "2.5.4"
